# musictui

./: CMakeLists.txt  flake.nix
include/: audio-engine.hpp  playback-position.hpp  read-directory.hpp  track_instance.hpp
include/audio/: device.hpp  engine.hpp  playback.hpp  playing-sound.hpp  track-properties.hpp  volume-handler.hpp  volume.hpp
include/filesystem/: directory-utils.hpp  read-directory.hpp
include/track/: track-data.hpp  track-switcher.hpp  track_instance.hpp
include/ui/: text-output.hpp  window.hpp
include/utils/: wide-string.hpp
src/: audio-engine.cpp  main.cpp  playback-position.cpp  read-directory.cpp  track-instance.cpp
src/audio/: device.cpp  engine.cpp  playback.cpp  playing-sound.cpp  track-properties.cpp  volume-handler.cpp  volume.cpp
src/filesystem/: directory-utils.cpp  read-directory.cpp
src/track/: track-data.cpp  track-instance.cpp  track-switcher.cpp
src/ui/: text-output.cpp  window.cpp
